# AlgoTrader

./: .env.example  .gitignore  AGENT_DASHBOARD.md  AGENT_EXECUTION.md  AGENT_STRATEGY.md  AlgoTrader_PRD.docx  CLAUDE.md  README.md
.claude/commands/: dev.md  health.md  styling.md
dashboard/: package-lock.json  package.json  tailwind.config.ts  tsconfig.tsbuildinfo
dashboard/app/: globals.css  layout.tsx  page.tsx
dashboard/components/: CandlestickChart.tsx  EmergencyHaltButton.tsx  EquityCurveChart.tsx  MarketIndexCard.tsx  MoversList.tsx  Navbar.tsx  NewsCard.tsx  PnlChart.tsx  PortfolioSummary.tsx  SectorPerformanceBar.tsx  SparklineChart.tsx  StrategyCard.tsx  Tip.tsx  TodaysTrades.tsx  WatchlistCard.tsx  WatchlistTable.tsx
dashboard/hooks/: useSseEvents.ts  useSymbols.ts
dashboard/lib/: api.ts
dashboard/types/: index.ts
execution-engine/: Cargo.toml
execution-engine/src/: alpaca.rs  db.rs  main.rs  models.rs  orders.rs  positions.rs  risk.rs  scheduler.rs  sse.rs
scripts/: ingest_historical.py  init_db.py  run_backtest.py  watchdog.sh
strategy-engine/: main.py  requirements.txt
strategy-engine/ml/: features.py  train.py
strategy-engine/strategies/: base.py  composite_scorer.py  news_fetcher.py  sentiment.py  strategy_ml_signal.py  strategy_momentum_volume.py  strategy_moving_average.py  strategy_multi_timeframe.py  strategy_news_sentiment.py  strategy_orb.py  strategy_relative_strength.py  strategy_rsi.py  strategy_vwap.py
strategy-engine/tests/: test_composite_scorer.py  test_ml_features.py  test_strategy_ml_signal.py  test_strategy_orb.py  (+7 more)
(+10 files in other folders)
