[package]
name = "execution-engine"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7", features = ["macros"] }
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
tokio-tungstenite = { version = "0.21", features = ["native-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
duckdb = { version = "0.10", features = ["bundled"] }
dotenvy = "0.15"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
chrono = { version = ">=0.4, <0.4.35", features = ["serde"] }
uuid = { version = "1", features = ["v4"] }
tokio-stream = { version = "0.1", features = ["sync"] }
axum-extra = { version = "0.9", features = ["typed-header"] }
thiserror = "1"
futures = "0.3"
tower-http = { version = "0.6", features = ["cors"] }
chrono-tz = "0.10"

[dev-dependencies]
tower = { version = "0.5", features = ["util"] }
